<?xml version="1.0" encoding="utf-8"?>
<com.kbsriram.ttith.android.view.CMaximumWidthLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ttith="http://schemas.android.com/apk/res/com.kbsriram.ttith.android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
    style="@style/StandardContainer"
    ttith:maximumChildWidth="@dimen/grid_m_12">
  <ScrollView
	  android:layout_width="match_parent"
	  android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/about_content_vg"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical">
	  <TextView
          android:id="@+id/about_version_tv"
          style="@style/BodyText"
		  android:layout_width="wrap_content"
	  	  android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/grid_b_3"
          android:layout_marginBottom="@dimen/grid_b_6"/>
	  <TextView
          style="@style/BodyText"
		  android:layout_width="wrap_content"
	  	  android:layout_height="wrap_content"
	  	  android:text="@string/about_para1"
          android:layout_marginBottom="@dimen/grid_b_6"/>
	  <TextView
          style="@style/BodyText"
		  android:layout_width="wrap_content"
	  	  android:layout_height="wrap_content"
	  	  android:text="@string/about_para2"
          android:layout_marginBottom="@dimen/grid_b_6"/>
	  <TextView
          style="@style/BodyText"
		  android:layout_width="wrap_content"
	  	  android:layout_height="wrap_content"
	  	  android:text="@string/about_para3"
          android:layout_marginBottom="@dimen/grid_b_6"/>
	  <TextView
          style="@style/BodyText"
		  android:layout_width="wrap_content"
	  	  android:layout_height="wrap_content"
	  	  android:text="@string/about_para4"
          android:layout_marginBottom="@dimen/grid_b_6"/>
	  <TextView
          style="@style/BodyText"
		  android:layout_width="wrap_content"
	  	  android:layout_height="wrap_content"
	  	  android:text="@string/about_para5"
          android:layout_marginBottom="@dimen/grid_b_6"/>
	  <TextView
          style="@style/BodyText"
		  android:layout_width="wrap_content"
	  	  android:layout_height="wrap_content"
	  	  android:text="@string/about_para6"
          android:layout_marginBottom="@dimen/grid_b_6"/>
	  <TextView
          style="@style/BodyText"
		  android:layout_width="wrap_content"
	  	  android:layout_height="wrap_content"
	  	  android:text="@string/about_para7"
          android:layout_marginBottom="@dimen/grid_b_6"/>
	  <TextView
          style="@style/BodyText"
		  android:layout_width="wrap_content"
	  	  android:layout_height="wrap_content"
	  	  android:text="@string/about_para8"
          android:layout_marginBottom="@dimen/grid_b_3"/>
	  <TextView
          style="@style/BodyText"
          android:id="@+id/about_para9_tv"
		  android:layout_width="wrap_content"
	  	  android:layout_height="wrap_content"
	  	  android:text="@string/about_para9"
          android:layout_marginBottom="@dimen/grid_b_2_3"/>
    </LinearLayout>
  </ScrollView>
</com.kbsriram.ttith.android.view.CMaximumWidthLayout>
